# jellyfin-mpv-shim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Jellyfin MPV Desktop.iss  Jellyfin MPV Desktop.nsi  Jellyfin MPV Shim.iss  LICENSE.md  MANIFEST.in  README.md  artifacts.sh  azure-pipelines.yml  build-win-32.bat  build-win-dbg.bat  build-win.bat  client.py  conf.py  conffile.py  display.py  gdm.py  gen_osc_icons.py  gen_pkg.sh  gen_ui_icons.py  get_pywebview_natives.py  hidpi.manifest  jellyfin-mpv-shim.service  media.py  mpv-shim.py  player.py  pyproject.toml  regen_pot.sh  run-desktop-edge.py  run-desktop.py  run.py  setup-mac.py  setup.py  subscribers.py  timeline.py  utils.py
.github/: FUNDING.yml  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/: ISSUES_TO_VERIFY.md  REGRESSION_CHECKLIST.md  configuration.md  development.md
jellyfin/: __init__.py  api.py  client.py  http.py
jellyfin_mpv_shim/: __init__.py  action_thread.py  args.py  bifdecode.py  bulk_subtitle.py  cli_mgr.py  clients.py  clipboard.py  conf.py  conffile.py  constants.py  display_mirror.py  event_handler.py  exit_watchdog.py  gdm.py  gui_mgr.py  i18n.py  imageutil.py  language_config.py  log_utils.py  media.py  menu.py  mouse.lua  mpv_events.py  mpv_shim.py  osc_bridge.py  player.py  rich_presence.py  session_reporter.py  settings_base.py  single_instance.py  subscribers.py  svgpath.py  svp_integration.py  syncplay.py  thumbfast.lua  timeline.py  tray.py  trickplay-jf-osc.lua  trickplay-osc.lua  (+10 more)
jellyfin_mpv_shim/display_mirror/: Movie.html  __init__.py  glyphicons.css  helpers.py  index.css  index.html  jellyfin.css
jellyfin_mpv_shim/integration/: com.github.iwalton3.jellyfin-mpv-shim.appdata.xml  com.github.iwalton3.jellyfin-mpv-shim.desktop  com.github.iwalton3.jellyfin-mpv-shim.desktop-player.desktop
jellyfin_mpv_shim/jellyfin/: api.py  configuration.py  connection_manager.py  credentials.py  exceptions.py  http.py  websocket.py  ws_client.py
jellyfin_mpv_shim/library_browser/: __init__.py  _icon_paths.py  app.py  icons.py  repository.py  theme.py  thumbnails.py  views.py  widgets.py
jellyfin_mpv_shim/messages/: base.pot
jellyfin_mpv_shim/mpvtk/: GUIDE.md  MIGRATION.md  PARITY.md  README.md  REVIEW_QUEUE.md  SPLIT_PLAN.md  __init__.py  __main__.py  app.py  calibrate.py  demo.py  layout.py  metrics.py  pilfont.py  rawimage.py  renderer.lua  scaling.py  theme.py  vector.py  widgets.py
jellyfin_mpv_shim/sync/: auto.py  (+4 more)
plex_mpv_shim/: action_thread.py  bulk_subtitle.py  client.py  conf.py  conffile.py  gdm.py  media.py  menu.py  mpv_shim.py  player.py  subscribers.py  timeline.py  utils.py
tests/: test_args.py  test_audio_settings.py  test_audit_fixes.py  test_auto_download.py  test_background_setting.py  test_browser_features.py  test_clipboard.py  test_close_to_tray.py  test_credentials_save.py  test_docs_coverage.py  test_exit_watchdog.py  test_home_rows.py  test_home_sections.py  test_icons.py  test_imageutil.py  test_integration_runner.py  test_ipc_teardown_timeout.py  test_kiosk_fullscreen.py  test_last_server_and_load_ui.py  test_live_tv_home.py  test_mpvtk_adopt.py  test_mpvtk_browser_mixins.py  test_mpvtk_browser_shell.py  test_mpvtk_cast.py  test_mpvtk_daemons.py  test_mpvtk_downloads_grouping.py  test_mpvtk_fake_conformance.py  test_mpvtk_framework.py  test_mpvtk_headless.py  test_mpvtk_layout.py  test_mpvtk_mirror.py  test_mpvtk_pilfont.py  test_mpvtk_strips.py  test_mpvtk_thumbnails.py  test_mpvtk_ui_wiring.py  test_mpvtk_virtualized_scrolls.py  test_no_tkinter.py  test_offline_media.py  test_offline_seasons.py  test_osc_bridge.py  (+32 more)
(+137 files in other folders)
