[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-mpv-shim"
description = "Cast media from Jellyfin Mobile and Web apps to MPV."
readme = "README.md"
authors = [{ name = "Izzie Walton", email = "izzie@iwalton.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "python-mpv>=1.0.8",
    "jellyfin-apiclient-python>=1.15.0",
    "python-mpv-jsonipc>=1.2.2",
    "requests",
    # Not optional since the in-player library browser replaced the Tk one:
    # every tile, the playback HUD and the cast screen are rasterized with
    # Pillow, and logging in at all now goes through that browser. Without it
    # the app falls back to the CLI, which is a materially different product.
    "pillow",
]

[project.urls]
Homepage = "https://github.com/jellyfin/jellyfin-mpv-shim"

[project.optional-dependencies]
systray = ["pystray"]
# Deprecated alias for `systray`. Kept because `jellyfin-mpv-shim[gui]` is in
# every version of the install instructions people have already copied, and an
# unknown extra is only a warning — the install would silently lack the tray.
gui = ["pystray"]
discord = ["pypresence"]
all = [
    "pystray",
    "pypresence",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
jellyfin-mpv-shim = "jellyfin_mpv_shim.mpv_shim:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "jellyfin_mpv_shim.constants.CLIENT_VERSION" }

[tool.setuptools.packages.find]
include = ["jellyfin_mpv_shim*"]

[tool.setuptools.package-data]
jellyfin_mpv_shim = [
    "systray.png",
    "logo.png",
    "*.lua",
    "messages/base.pot",
    "messages/*/LC_MESSAGES/*.mo",
    "default_shader_pack/**/*",
    "integration/**/*",
]
# mpvtk loads renderer.lua relative to its own __file__, so it has to land in
# the subpackage directory — the top-level "*.lua" glob does not reach here.
"jellyfin_mpv_shim.mpvtk" = ["*.lua"]
